Fix spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2873,4 +2873,9 @@ footer.site_footer ul li {
   margin: 0 1rem 2rem 0;
   padding: 0;
   display: inline-block;
+}
+@media (max-width: 768px) {
+  footer.site_footer ul li {
+    margin: 1rem 0.5rem;
+  }
 }/*# sourceMappingURL=app.css.map */
