--- a/assets/css/scss/_footer.scss
+++ b/assets/css/scss/_footer.scss
@@ -15,6 +15,10 @@ footer.site_footer {
             margin: 0 1rem 2rem 0;
             padding: 0;
             display: inline-block;
+
+            @media (max-width: 768px) {
+                margin: 1rem 0.5rem;
+            }
         }
     }
 }
